WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/Credit_Utilization_History__c.object-meta.xml
<CustomObject>
    <label>Credit Utilisation History</label>
    <nameField>
        <displayFormat>CredutilHist{00000}</displayFormat>
        <label>Credit Utilisation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Utilisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>