WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Credit_Utilizations</relationshipName>
    <type>Lookup</type>
</CustomField>