WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/fields/Credit_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Credit_Utilization__c</fullName>
    <formula>( Overall_balance__c  / Overall_Credit_limit__c )</formula>
    <label>Credit Utilisation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>