WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/fields/Overall_balance__c.field-meta.xml
<CustomField>
    <fullName>Overall_balance__c</fullName>
    <label>Overall Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>