WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/fields/Overall_Credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Overall_Credit_limit__c</fullName>
    <label>Overall Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>