WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>