WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/fields/Summary_of_Allocated_Payments__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Allocated_Payments__c</fullName>
    <label>Summary of Allocated Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>