WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/fields/Summary_of_Uninvoiced_Customer_Trans__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Uninvoiced_Customer_Trans__c</fullName>
    <label>Summary of Uninvoiced Customer Trans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>