WexGit/Wex_DX/force-app/main/default/objects/Credit_Utilization_History__c/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <label>Utilisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>